Fix style mega dropdown menu not align center

--- a/plugins/system/zo2/framework/assets/zo2/development/less/megamenu.less
+++ b/plugins/system/zo2/framework/assets/zo2/development/less/megamenu.less
@@ -46,6 +46,14 @@
           left: auto
         }
       }
+      &.mega-align-center {
+        > .dropdown-menu {
+          left: 50%;
+          -webkit-transform: translateX(-50%);
+             -moz-transform: translateX(-50%);
+                  transform: translateX(-50%);
+        }
+      }
     }
     .dropdown-menu {
       border-radius: 0;
